# LabPatterns

./: .gitignore  LICENSE  README.md  pyproject.toml
LB1/Task1/: README.md  main.py
LB1/Task1/character/: character.py  item.py  item_factory.py
LB1/Task2/: Task2.sln
LB1/Task2/Task2/: Circle.cs  IShape.cs  Program.cs  README.md  Rectangle.cs  ShapeRegistry.cs
LB1/Task3/: README.md
LB1/Task3/src/: Character.java  Main.java
LB1/Task3/src/factory/: ArcherItemFactory.java  ItemFactory.java  WarriorItemFactory.java
LB1/Task3/src/items/: Armor.java  Bow.java  LeatherArmor.java  Shield.java  Sword.java  Weapon.java
LB2/Task1/: README.md  main.py
LB2/Task2/: README.md  Task2.sln
LB2/Task2/Task2/: Dog.cs  DogFullNameAdapter.cs  Human.cs  IWithFullName.cs  Program.cs
LB2/Task3/: .gitignore  README.md
LB2/Task3/src/: Character.java  CharacterIterator.java  Main.java  Party.java
LB3/Task1/: README.md  main.py
LB3/Task2/: README.md  Task2.sln
LB3/Task2/Task2/: ISortStrategy.cs  Program.cs  ReverseSortStrategy.cs  SortStrategy.cs  SortedList.cs
LB3/Task3/: README.md
LB3/Task3/src/: Main.java  Publisher.java  RabbitMqPublisher.java  RedisPublisher.java
LB4/: LB4.sln  README.md
LB4/LB4/: Program.cs  TodoApp.cs
LB4/LB4/Interfaces/: ITodoItem.cs  ITodoRepository.cs  ITodoService.cs  IUserInterface.cs
LB4/LB4/Models/: TodoItem.cs
LB4/LB4/Repositories/: InMemoryTodoRepository.cs
LB4/LB4/Services/: TodoService.cs
LB4/LB4/UserInterfaces/: ConsoleUserInterface.cs
