[tool.poetry]
name = "labpatterns"
version = "0.1.0"
description = ""
authors = ["TreeNode <ashot.seropian@nure.ua>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
